--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -216,7 +216,6 @@ a {
 .mid{
      margin-top: 120px;
      height: 250px;
-     margin-bottom: 300px;
      .mid-box{
           width: 808px;
           height: 244px;
@@ -309,6 +308,67 @@ a {
                          font-size: 16px;
                          line-height: 26px;
                          color: #435970;
+                    }
+               }
+          }
+     }
+}
+// related card
+.related{
+     border: 1px solid black;
+     margin-bottom: 300px;
+     
+     .related-heading{
+          width: 167px;
+          height: 30px;
+          font-family: 'Space Grotesk';
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 30px;
+          color: #001F3F;
+          padding: 20px 0;
+     }
+     .boxs{
+          padding: 30px 0;
+          .card-box{
+               width: 270px;
+               text-align: center;
+               border: 2px solid red;
+               .d-img{
+                    width: 100%;
+                    height: 272px;  
+                    background: #FAFAFF;
+                    border-radius: 5px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+               }
+               .icon {
+                    i{
+                         color: #FF5A30
+                    };
+               }
+               .name{
+                    font-family: 'Space Grotesk';
+                    font-weight: 700;
+                    font-size: 15px;
+                    line-height: 20px;
+                    color: #001F3F;
+               }
+               .price{
+                    font-family: 'Space Grotesk';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 26px;
+                    text-transform: uppercase;
+                    color: #001F3F;
+                    span{
+                         font-family: 'Space Grotesk';
+                         font-weight: 700;
+                         font-size: 16px;
+                         line-height: 30px;
+                         color: #FF5A30;
                     }
                }
           }
