--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -124,6 +124,10 @@ a {
                     height: 50px;
                     background: #FF5A30;
                     border-radius: 5px;
+                    transition: all 0.4s ease-in-out;
+                    i{
+                         color: #Fff;
+                    }
                     span{
                          width: 100px;
                          height: 26px;
@@ -133,6 +137,11 @@ a {
                          line-height: 26px;
                          text-transform: uppercase;
                          color: #FFFFFF;
+                         padding-left: 3px;
+                    }
+                    &:hover{
+                         background: #001F3F;
+                         
                     }
                }
                .count{
@@ -157,6 +166,7 @@ a {
           }
      }
      .systems{
+          padding-top: 20px ;
           display: grid;
           grid-template-columns: repeat(3,1fr);
           grid-gap:10px;
@@ -191,7 +201,7 @@ a {
           }
      }
      .last{
-          padding: 30px 0;
+          padding: 70px 0;
           .sku{
                // width: 95px;
                height: 26px;
@@ -230,6 +240,7 @@ a {
                     height: 60px;
                     background: #FAFAFF;
                     border-radius: 5px;
+                    transition: all 0.4s ease-in-out;
                     span{
                          width: 90px;
                          height: 30px;
@@ -238,7 +249,14 @@ a {
                          font-size: 16px;
                          line-height: 30px;
                          color: #001F3F;
+                         
                     };
+                    &:hover{
+                         background: #001F3F;
+                      &:hover span{
+                         color: #Fff;
+                     }
+                    }
                }
                .addi{
                     width: 234px;
@@ -246,6 +264,7 @@ a {
                     background: #FF5A30;
                     border-radius: 5px;
                     position: relative;
+                    transition: all 0.4s ease-in-out;
                     span{
                          font-family: 'Space Grotesk';
                          font-style: normal;
@@ -263,7 +282,11 @@ a {
                          border-radius: 5px;
                          top: 50%;
                          left: 80%;
+                         z-index: -1;
 
+                    }
+                    &:hover{
+                         background: #001F3F;
                     }
                }
                .rev{
@@ -271,6 +294,7 @@ a {
                     height: 60px;
                     background: #FAFAFF;
                     border-radius: 5px;
+                    transition: all 0.4s ease-in-out;
                     span{
                          width: 90px;
                          height: 30px;
@@ -280,6 +304,12 @@ a {
                          line-height: 30px;
                          color: #001F3F;
                     };
+                    &:hover{
+                         background: #001F3F;
+                        &:hover{
+                              color: #Fff;
+                         }
+                    }
                }
           }
           .box{
@@ -315,7 +345,6 @@ a {
 }
 // related card
 .related{
-     border: 1px solid black;
      margin-bottom: 300px;
      
      .related-heading{
@@ -333,7 +362,6 @@ a {
           .card-box{
                width: 270px;
                text-align: center;
-               border: 2px solid red;
                .d-img{
                     width: 100%;
                     height: 272px;  
@@ -341,7 +369,7 @@ a {
                     border-radius: 5px;
                     display: flex;
                     align-items: center;
-                    justify-content: center;
+                    justify-content: center; 
                }
                .icon {
                     i{
@@ -372,5 +400,6 @@ a {
                     }
                }
           }
+          
      }
 }
