--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -107,7 +107,7 @@ a {
           }
      }
      .quantity{
-          padding: 20px 0;
+          padding: 40px 0;
           h4{
                width: 72px;
                height: 26px;
@@ -166,7 +166,7 @@ a {
           }
      }
      .systems{
-          padding-top: 20px ;
+          // padding-top: 20px ;
           display: grid;
           grid-template-columns: repeat(3,1fr);
           grid-gap:10px;
@@ -201,7 +201,7 @@ a {
           }
      }
      .last{
-          padding: 70px 0;
+          padding: 50px 0;
           .sku{
                // width: 95px;
                height: 26px;
